--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,3 +2,10 @@
 
 # Handlers main file for collectd role
 
+
+- name: 'restart collectd'
+  become: True
+  service:
+    name: "{{ collectd_service_name }}"
+    state: 'restarted'
+  when: "{{ collectd_service_state != 'stopped' }}"
