--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,3 +2,28 @@
 
 # Main tasks file for collectd role
 
+- name: 'Load the OS specific varibles'
+  include_vars: "{{ role_path }}/vars/{{ ansible_os_family | lower }}.yml"
+  tags:
+    - 'install'
+    - 'collectd'
+
+
+- include: 'install_debian.yml'
+  when: "{{ ansible_os_family == 'Debian' }}"
+  tags:
+    - 'install'
+    - 'collectd'
+
+
+- name: 'Manage collectd service'
+  become: True
+  service:
+    name: "{{ collectd_service_name }}"
+    enabled: "{{ collectd_service_enabled }}"
+    state: "{{ collectd_service_state }}"
+  notify:
+    - 'restart collectd'
+  tags:
+    - 'install'
+    - 'collectd'
