--- a/tasks/install_debian.yml
+++ b/tasks/install_debian.yml
@@ -21,9 +21,13 @@
     state: "{{ collectd_package_state }}"
     cache_valid_time: "{{ collectd_cache_valid_time }}"
     update_cache: "{{ collectd_update_cache }}"
-  with_items: "{{ collectd_plugins | map(
+  with_items: "{{ collectd_plugins_with_dependencies
+                  | map(
                     'extract',
                     collectd_plugins_dependencies[ansible_distribution_release]
-                  ) | list }}"
+                  )
+                  | list }}"
+  when: "{{
+    collectd_plugins_dependencies[ansible_distribution_release] is defined }}"
   notify:
     - 'restart collectd'
