--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,5 +11,70 @@ collectd_update_cache: True
 collectd_service_enabled: True
 collectd_service_state: 'started'
 
+
+# Custom types
+collectd_custom_types: {}
+collectd_custom_types_file_path: '/etc/collectd/my_types.db'
+
+# Main configuration
+collectd_hostname: 'localhost'
+collectd_fqdn_lookup: 'true'
+collectd_base_dir: '/var/lib/collectd'
+collectd_plugin_dir: '/usr/lib/collectd'
+collectd_types_db:
+  - '"/usr/share/collectd/types.db"'
+  - '"{{ collectd_custom_types_file_path }}"'
+
+collectd_auto_load_plugin: 'false'
+collectd_interval: 10
+collectd_timeout: 2
+colectd_read_threads: 5
+colectd_write_threads: 5
+
+collectd_write_queue_limit_high: False
+collectd_write_queue_limit_low: False
+
+
+# Logging plugins management
+collectd_logging_plugins: "{{
+  collectd_logging_plugins_config | map(attribute='name') | list }}"
+
+collectd_logging_plugins_config:
+  - name: 'syslog'
+    activate_entries: []
+    config_entries:
+      - 'LogLevel info'
+
+
 # Plugins management
-collectd_plugins: []
+collectd_plugins: "{{
+  collectd_plugins_config | map(attribute='name') | list }}"
+
+collectd_plugins_with_dependencies: "{{
+  collectd_plugins_dependencies[ansible_distribution_release].keys()
+  | intersect(collectd_plugins) }}"
+
+collectd_plugins_config:
+  - name: 'df'
+    config_entries:
+      - 'FSType rootfs'
+      - 'FSType sysfs'
+      - 'FSType proc'
+      - 'FSType devtmpfs'
+      - 'FSType devpts'
+      - 'FSType tmpfs'
+      - 'FSType fusectl'
+      - 'FSType cgroup'
+      - 'IgnoreSelected true'
+  - name: 'disk'
+  - name: 'entropy'
+  - name: 'interface'
+  - name: 'irq'
+  - name: 'load'
+  - name: 'memory'
+  - name: 'processes'
+  - name: 'rrdtool'
+    config_entries:
+      - 'DataDir "/var/lib/collectd/rrd"'
+  - name: 'swap'
+  - name: 'users'
