--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -78,3 +78,19 @@ collectd_plugins_config:
       - 'DataDir "/var/lib/collectd/rrd"'
   - name: 'swap'
   - name: 'users'
+
+# Logrotate configuration
+collectd_log_dir_path: '/var/log/collectd'
+collectd_logrotate_managed: False
+collectd_logrotate_file_path: '/etc/logrotate.d/collectd'
+collectd_logrotate_file_owner: 'root'
+collectd_logrotate_file_group: 'root'
+collectd_logrotate_file_mode: '0644'
+collectd_logrotate_pattern: "{{ collectd_log_dir_path ~ '/*.log' }}"
+collectd_logrotate_options:
+  - 'rotate 7'
+  - 'daily'
+  - 'compress'
+  - 'delaycompress'
+  - 'missingok'
+  - "create 640 root root"
