--- a/tasks/install_debian.yml
+++ b/tasks/install_debian.yml
@@ -2,6 +2,24 @@
 
 # Manage Collectd install on Debian systems
 
+- name: 'Install ppa gpg key'
+  become: True
+  apt_key:
+    id: "{{ collectd_ppa_key_id }}"
+    keyserver: "{{ collectd_ppk_key_server }}"
+  when: "{{ collectd_use_ppa and
+    (ansible_distribution_release in collectd_ppa_managed_distributions) }}"
+
+
+- name: 'Install ppa repository'
+  become: True
+  apt_repository:
+    repo: "{{ collectd_ppa_source }}"
+    update_cache: True
+  when: "{{ collectd_use_ppa and
+    (ansible_distribution_release in collectd_ppa_managed_distributions) }}"
+
+
 - name: 'Install collectd'
   become: True
   apt:
