--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,18 +1,17 @@
 ---
 
 galaxy_info:
-  author: Alexandre Chaussier
-  description: Install and configure collectd
-  company: Temelio (http://temelio.com)
-  license: MIT
-  min_ansible_version: 2.1
-  github_branch: master
+  author: 'Alexandre Chaussier'
+  description: 'Install and configure collectd'
+  company: 'Temelio (http://temelio.com)'
+  license: 'MIT'
+  min_ansible_version: '2.1'
+  github_branch: 'master'
   platforms:
-    - name: Ubuntu
+    - name: 'Ubuntu'
       versions:
-        - trusty
+        - 'trusty'
   galaxy_tags:
-    - monitoring
-    - system
+    - 'monitoring'
+    - 'system'
 dependencies: []
-
