--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -16,6 +16,8 @@ collectd_plugins_dependencies:
     bind:
       - 'libcurl3-gnutls'
       - 'libxml2'
+    ceph:
+      - 'libyajl2'
     curl:
       - 'libcurl3-gnutls'
     curl_json:
@@ -26,8 +28,12 @@ collectd_plugins_dependencies:
       - 'libxml2'
     dbi:
       - 'libdbi1'
+    disk:
+      - 'libudev1'
     dns:
       - 'libpcap0.8'
+    gmond:
+      - 'libganglia1'
     ipmi:
       - 'libopenipmi0'
     iptables:
@@ -35,6 +41,8 @@ collectd_plugins_dependencies:
     libvirt:
       - 'libvirt0'
       - 'libxml2'
+    log_logstash:
+      - 'libyajl2'
     lvm:
       - 'liblvm2app2.2'
     memcachec:
@@ -66,6 +74,8 @@ collectd_plugins_dependencies:
       - 'libpq5'
     python:
       - 'libpython2.7'
+    redis:
+      - 'libhiredis0.10'
     rrdcached:
       - 'librrd4'
     rrdtool:
@@ -73,13 +83,26 @@ collectd_plugins_dependencies:
     sensors:
       - 'lm-sensors'
       - 'libsensors4'
+    sigrok:
+      - 'libglib2.0-0'
+      - 'libsigrok1'
+    smart:
+      - 'libatasmart4'
+      - 'libudev1'
     snmp:
       - 'libsnmp30'
     tokyotyrant:
       - 'libtokyotyrant3'
     varnish:
       - 'libvarnishapi1'
+    virt:
+      - 'libvirt0'
+      - 'libxml2'
     write_http:
       - 'libcurl3-gnutls'
+    write_kafka:
+      - 'librdkafka1'
+    write_redis:
+      - 'libhiredis0.10'
     write_riemann:
       - 'libprotobuf-c0'
