--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,7 +36,7 @@ collectd_network_auth_file_path: '/etc/collectd/network_server_auth.db'
 
 
 # Main configuration
-collectd_hostname: 'localhost'
+collectd_hostname: "{{ ansible_hostname }}"
 collectd_fqdn_lookup: 'true'
 collectd_base_dir: '/var/lib/collectd'
 collectd_plugin_dir: '/usr/lib/collectd'
