--- a/testing_deployment.yml
+++ b/testing_deployment.yml
@@ -1,11 +1,1 @@
----
-
-# Role travis tests
-
-- hosts: 'all'
-  roles:
-    - role: "{{ role_name }}"
-  vars:
-    role_name: "{{ playbook_dir | basename }}"
-  vars_files:
-    - './tests/test_vars.yml'
+tests/testing_deployment.yml
