--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ env:
 
   matrix:
     - TOXENV='py27-ansible21'
+    - TOXENV='py27-ansible22'
     - TOXENV='py27-ansible-devel'
 
 before_install:
