--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -2,7 +2,7 @@
 
 # Manage Collectd configuration
 
-- name: 'Manage collectd main configuration file'
+- name: 'CONFIG | MAIN | Manage collectd main configuration file'
   become: True
   template:
     src: 'etc/collectd/collectd.conf.j2'
@@ -12,11 +12,11 @@
     mode: '0400'
     backup: True
     validate: 'collectd -t -C %s'
-  notify: 'restart collectd'
+  notify: 'HANDLER | Restart collectd'
   no_log: True
 
 
-- name: 'Manage collectd custom types file'
+- name: 'CONFIG | TYPES | Manage collectd custom types file'
   become: True
   template:
     src: 'etc/collectd/custom_types.db.j2'
@@ -24,10 +24,10 @@
     owner: 'root'
     group: 'root'
     mode: '0400'
-  notify: 'restart collectd'
+  notify: 'HANDLER | Restart collectd'
 
 
-- name: 'Manage collectd network server auth file'
+- name: 'CONFIG | NETWORK | Manage collectd network server auth file'
   become: True
   template:
     src: 'etc/collectd/auth.db.j2'
@@ -35,12 +35,12 @@
     owner: 'root'
     group: 'root'
     mode: '0400'
-  notify: 'restart collectd'
+  notify: 'HANDLER | Restart collectd'
   no_log: True
   when: "{{ collectd_network_server_auth_data | length > 0 }}"
 
 
-- name: 'Manage logrotate configuration'
+- name: 'CONFIG | LOGROTATE | Manage logrotate configuration'
   become: True
   template:
     src: "{{ role_path }}/templates/etc/logrotate.d/logrotate.conf.j2"
