--- a/vars/os_family/debian.yml
+++ b/vars/os_family/debian.yml
@@ -2,6 +2,13 @@
 
 # Debian family specific vars
 
+# Repositories
+_collectd_repositories_keys:
+  - id: '3994D24FB8543576'
+    keyserver: 'keyserver.ubuntu.com'
+_collectd_repositories:
+  - repo: "deb http://pkg.ci.collectd.org/deb {{ ansible_distribution_release | lower }} {{ collectd_repository_component }}"
+
 # Packages
 _collectd_system_dependencies:
   - name: 'ca-certificates'
