--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,23 +2,20 @@
 
 # Defaults vars file for collectd role
 
-# Package installation management
-# Instead collectd_use_ppa set to True, if ansible_distribution_release not
-# referenced in collectd_ppa_managed_distributions ppa, ppa will not installed
-collectd_use_ppa: True
-collectd_ppa_managed_distributions:
-  - 'trusty'
-  - 'xenial'
-collectd_ppa_key_id: '7543C08D555DC473B9270ACDAF7ECBB3476ACEB3'
-collectd_ppk_key_server: 'keyserver.ubuntu.com'
-collectd_ppa_source: 'ppa:collectd/collectd-5.5'
-
-collectd_packages:
-  - 'collectd=5.5.2*'
-  - 'collectd-core=5.5.2*'
-collectd_package_state: 'present'
+# Repositories management
+collectd_use_additional_repository: True
 collectd_repository_cache_valid_time: 3600
+collectd_repository_component: 'collectd-5.5'
 collectd_repository_update_cache: True
+collectd_repositories: "{{ _collectd_repositories | default([]) }}"
+collectd_repositories_keys: "{{ _collectd_repositories_keys | default([]) }}"
+
+
+# Packages management
+collectd_packages:
+  - 'collectd=5.5*'
+  - 'collectd-core=5.5*'
+collectd_package_state: 'present'
 collectd_plugins_dependencies: "{{ _collectd_plugins_dependencies | default([]) }}"
 collectd_system_dependencies: "{{ _collectd_system_dependencies | default([]) }}"
 
