--- a/molecule.yml
+++ b/molecule.yml
@@ -6,7 +6,9 @@ ansible:
   raw_env_vars:
     ANSIBLE_NOCOWS: 1
   group_vars:
-    all: {}
+    all:
+      collectd_network_server_auth_data:
+        foo: 'var'
 dependency:
   name: 'galaxy'
 driver:
@@ -16,12 +18,21 @@ docker:
     - name: 'collectd-docker-jessie'
       image: 'debian'
       image_version: 'jessie'
+      privileged: True
+      cap_add:
+        - 'SYS_PTRACE'
     - name: 'collectd-docker-trusty'
-      image: 'ubuntu'
+      image: 'ubuntu-upstart'
       image_version: 'trusty'
+      privileged: True
+      cap_add:
+        - 'SYS_PTRACE'
     - name: 'collectd-docker-xenial'
       image: 'ubuntu'
       image_version: 'xenial'
+      privileged: True
+      cap_add:
+        - 'SYS_PTRACE'
 molecule:
   ignore_paths:
     - '.git'
