--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 # Main tasks file for collectd role
 
 - name: 'INIT | Manage variables to use for our target'
-  include: "{{ role_path }}/tasks/manage_variables.yml"
+  include_tasks: "{{ role_path }}/tasks/manage_variables.yml"
   tags:
     - 'role::collectd'
     - 'role::collectd::config'
@@ -13,7 +13,7 @@
 
 - name: 'INSTALL | Manage OS family installation tasks'
   become: True
-  include: "{{ role_path }}/tasks/install_{{ ansible_os_family | lower }}.yml"
+  include_tasks: "{{ role_path }}/tasks/install_{{ ansible_os_family | lower }}.yml"
   tags:
     - 'role::collectd'
     - 'role::collectd::install'
@@ -34,7 +34,7 @@
 
 - name: 'CONFIG | Manage collectd configuration tasks'
   become: True
-  include: "{{ role_path }}/tasks/configure.yml"
+  include_tasks: "{{ role_path }}/tasks/configure.yml"
   tags:
     - 'role::collectd'
     - 'role::collectd::config'
