--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,20 +1,22 @@
 ---
 
 galaxy_info:
-  author: 'Alexandre Chaussier'
+  author: 'Alexandre Chaussier, upgrade: Lise Machetel'
   description: 'Ansible role to install and configure Collectd'
   company: 'Temelio (http://www.temelio.com)'
   license: 'MIT'
-  min_ansible_version: '2.2'
+  min_ansible_version: '2.4'
   github_branch: 'master'
   platforms:
     - name: 'Debian'
       versions:
         - 'jessie'
+        - 'stretch'
     - name: 'Ubuntu'
       versions:
         - 'trusty'
         - 'xenial'
+        - 'bionic'
   galaxy_tags:
     - 'monitoring'
     - 'system'
