--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-molecule==2.10.0
-pytest==3.4.1
-python-vagrant==0.5.15
-testinfra==1.10.1
-tox==2.9.1
+molecule==2.18.1
+pytest==3.8.1
+testinfra==1.16.0
+tox==3.4.0
+docker==3.4.1
